# wazuh-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  __init__.py  mcp_config.json.example  pyproject.toml  pytest.ini  run_all_servers.py
config/: .env.example
deployment/: .env.docker.example  .env.production.example  README.md  requirements-mcp.txt  start-docker.bat  start-docker.sh  test_sse_endpoints.py
deployment/docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: README.md  api-reference.md  configuration.md  development.md  docker-deployment.md  installation.md  quick-start.md  tools-reference.md  transport-modes.md  troubleshooting.md
src/wazuh_mcp_server/: __init__.py  server_manager.py
src/wazuh_mcp_server/wazuh_indexer/: server.py
src/wazuh_mcp_server/wazuh_indexer/config/: __init__.py  base_config.py  indexer_config.py
src/wazuh_mcp_server/wazuh_indexer/services/: indexer_service.py
src/wazuh_mcp_server/wazuh_indexer/tools/: cluster_tools.py  index_tools.py  search_tools.py  security_tools.py  tool_clients.py
src/wazuh_mcp_server/wazuh_indexer/utils/: logger.py
src/wazuh_mcp_server/wazuh_manager/: server.py
src/wazuh_mcp_server/wazuh_manager/config/: __init__.py  manager_config.py
src/wazuh_mcp_server/wazuh_manager/tools/: __init__.py  ciscat.py  decoders.py  mitre.py  overview.py  rootcheck.py  rules.py  security.py  syscollector.py  tasks.py  tool_clients.py
src/wazuh_mcp_server/wazuh_manager/utils/: __init__.py  logger.py
tests/: README.md  test_mcp_registration_fix.py  test_registration_fix.py
wazuh_indexer/: __init__.py  run_server.py
wazuh_indexer/services/: __init__.py
wazuh_indexer/tools/: __init__.py  monitoring_tools.py
wazuh_indexer/utils/: __init__.py
wazuh_manager/: __init__.py
wazuh_manager/config/: base_config.py
wazuh_manager/services/: __init__.py  manager_service.py
wazuh_manager/tools/: agents.py  api_info.py  cluster.py  experimental.py  groups.py  lists.py  manager.py  sca.py  syscheck.py  wazuh_manager_base_api.py
